--- a/src/templates/blocks/all-accounts.html
+++ b/src/templates/blocks/all-accounts.html
@@ -8,7 +8,6 @@
         </a>
     </nav>
     <div class="filters">
-        
         <div class="filters__icon">
             <svg width="24" height="24" aria-hidden="true" class="icon-filters">
                 <use xlink:href="#filters" />
@@ -16,19 +15,19 @@
         </div>
         <form action="/" class="filters__form">
             <div class="filters__custom-select">
-                <select name="city" class="js-custom-select"> 
-                    <option value="all" selected>Все города</option> 
+                <select name="city" class="js-custom-select">
+                    <option value="all" selected>Все города</option>
                     <option value="kazan">Казань</option>
                     <option value="moscow">Москва</option>
-                  </select>
+                </select>
             </div>
             <div class="filters__custom-select">
-                <select name="role" class="js-custom-select"> 
-                    <option value="all" selected>Все роли</option> 
+                <select name="role" class="js-custom-select">
+                    <option value="all" selected>Все роли</option>
                     <option value="ceo">Руководитель</option>
                     <option value="lector">Лектор</option>
                     <option value="employee">Сотрудник</option>
-                  </select>
+                </select>
             </div>
         </form>
     </div>
@@ -53,201 +52,355 @@
             <tbody>
                 <tr>
                     <td>
-                        1
+                        <a href="#"> 1</a>
                     </td>
                     <td>
-                        Воробьева Мария Александрровна
+                        <a href="#"> Воробьева Мария Александрровна</a>
                     </td>
                     <td>
-                        Руководитель
+                        <a href="#">
+                            Руководитель
+                        </a>
                     </td>
                     <td>
-                        Москва
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        2
-                    </td>
-                    <td>
-                        Дибров Дмитрий Сергеевич
-                    </td>
-                    <td>
-                        Лектор
-                    </td>
-                    <td>
-                        Казань
+                        <a href="#">
+                            Москва
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        3
+                        <a href="#"> 2</a>
                     </td>
                     <td>
-                        Петров Денис Вячеслалович
+                        <a href="#">
+                            Дибров Дмитрий Сергеевич
+                        </a>
                     </td>
                     <td>
-                        Лектор
+                        <a href="#">
+                            Лектор
+                        </a>
                     </td>
                     <td>
-                        Москва
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        4
-                    </td>
-                    <td>
-                        Воробьев Александр Александрович
-                    </td>
-                    <td>
-                        Руководитель
-                    </td>
-                    <td>
-                        Казань
+                        <a href="#">
+                            Казань
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        5
+                        <a href="#">
+                            3
+                        </a>
                     </td>
                     <td>
-                        Соловьева Инна Генадьевна
+                        <a href="#">
+                            Петров Денис Вячеслалович
+                        </a>
                     </td>
                     <td>
-                        Сотрудник
+                        <a href="#">
+                            Лектор
+                        </a>
                     </td>
                     <td>
-                        Москва
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        6
-                    </td>
-                    <td>
-                        Сидорова Евгения Генадьевна
-                    </td>
-                    <td>
-                        Сотрудник
-                    </td>
-                    <td>
-                        Москва
+                        <a href="#">
+                            Москва
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        7
+                        <a href="#">
+                            4
+                        </a>
                     </td>
                     <td>
-                        Карташов Александ Сергевич
+                        <a href="#">
+                            Воробьев Александр Александрович
+                        </a>
                     </td>
                     <td>
-                        Сотрудник
+                        <a href="#">
+                            Руководитель
+                        </a>
                     </td>
                     <td>
-                        Казань
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        8
-                    </td>
-                    <td>
-                        Егоров Сергей Борисович
-                    </td>
-                    <td>
-                        Лектор
-                    </td>
-                    <td>
-                        Сызрань
+                        <a href="#">
+                            Казань
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        8
+                        <a href="#">
+                            5
+                        </a>
                     </td>
                     <td>
-                        Егоров Сергей Борисович
+                        <a href="#">
+                            Соловьева Инна Генадьевна
+                        </a>
                     </td>
                     <td>
-                        Лектор
+                        <a href="#">
+                            Сотрудник
+                        </a>
                     </td>
                     <td>
-                        Сызрань
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        9
-                    </td>
-                    <td>
-                        Платонов Влад Сергеевич
-                    </td>
-                    <td>
-                        Лектор
-                    </td>
-                    <td>
-                        Казань
+                        <a href="#">
+                            Москва
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        10
+                        <a href="#">
+                            6
+                        </a>
                     </td>
                     <td>
-                        Шириев Артур Маратович
+                        <a href="#">
+                            Сидорова Евгения Генадьевна
+                        </a>
                     </td>
                     <td>
-                        Руководитель
+                        <a href="#">
+                            Сотрудник
+                        </a>
                     </td>
                     <td>
-                        Казань
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        11
-                    </td>
-                    <td>
-                        Медведев Александр Александрович
-                    </td>
-                    <td>
-                        Руководитель
-                    </td>
-                    <td>
-                        Москва
+                        <a href="#">
+                            Москва
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        12
+                        <a href="#">
+                            7
+                        </a>
                     </td>
                     <td>
-                        Медведев Михаил Александрович
+                        <a href="#">
+                            Карташов Александ Сергевич
+                        </a>
                     </td>
                     <td>
-                        Лектор
+                        <a href="#">
+                            Сотрудник
+                        </a>
                     </td>
                     <td>
-                        Казань
+                        <a href="#">
+                            Казань
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        13
+                        <a href="#">
+                            8
+                        </a>
                     </td>
                     <td>
-                        Овдиенко Владимир Иванович
+                        <a href="#">
+                            Егоров Сергей Борисович
+                        </a>
                     </td>
                     <td>
-                        Руководитель
+                        <a href="#">
+                            Лектор
+                        </a>
                     </td>
                     <td>
-                        Краснодар
+                        <a href="#">
+                            Сызрань
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#">
+                            8
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Егоров Сергей Борисович
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Лектор
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Сызрань
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#">
+                            9
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Платонов Влад Сергеевич
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Лектор
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Казань
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#">
+                            10
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Шириев Артур Маратович
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Руководитель
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Казань
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#">
+                            11
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Медведев Александр Александрович
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Руководитель
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Москва
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#">
+                            12
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Медведев Михаил Александрович
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Лектор
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Казань
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#">
+                            13
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Овдиенко Владимир Иванович
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Руководитель
+                        </a>
+                    </td>
+                    <td>
+                        <a href="#">
+                            Краснодар
+                        </a>
                     </td>
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div class="pagination">
+        <div class="pagination__item-count">
+            Строк на странице
+            <div class="pagination__item-count-select">
+                <select name="offset" class="js-custom-select">
+                    <option value="10" selected>10</option>
+                    <option value="9">9</option>
+                    <option value="8">8</option>
+                    <option value="7">7</option>
+                    <option value="6">6</option>
+                    <option value="5">5</option>
+                    <option value="4">4</option>
+                    <option value="3">3</option>
+                    <option value="2">2</option>
+                    <option value="1">1</option>
+                </select>
+            </div>
+        </div>
+        <div class="pagination__links">
+            <a href="#" class="pagination__prev-link">
+                <svg width="10" height="18" aria-hidden="true" class="icon-arrow-left">
+                    <use xlink:href="#arrow-left" />
+                </svg>
+            </a>
+            <div class="pagination__pages-links">
+                <a href="#" class="pagination__pages-link">
+                    1
+                </a>
+                <a href="#" class="pagination__pages-link">
+                    2
+                </a>
+                <a href="#" class="pagination__pages-link">
+                    3
+                </a>
+                <a href="#" class="pagination__pages-link">
+                    ...
+                </a>
+                <a href="#" class="pagination__pages-link">
+                    30
+                </a>
+            </div>
+            <a href="#" class="pagination__next-link">
+                <svg width="10" height="18" aria-hidden="true" class="icon-arrow-left">
+                    <use xlink:href="#arrow-left" />
+                </svg>
+            </a>
+        </div>
     </div>
 </section>
