--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -1,7 +1,7 @@
 .user {
     display: flex;
     justify-content: flex-end;
-    padding: 2.5rem;
+    padding: 2.5rem 0;
 }
 
 
@@ -29,6 +29,7 @@
         width: 2.4rem;
         height: 2.4rem;
         flex-shrink: 0;
+        margin: 0;
       
     }
 
