--- a/src/scss/blocks/_login.scss
+++ b/src/scss/blocks/_login.scss
@@ -6,18 +6,22 @@
     border-radius: .8rem;
     display: flex;
     flex-direction: column;
-    padding: 3rem 5rem;
+    padding: 3rem 3rem;
+    min-height: 44rem;
 }
 
 .login__logo {
     width: 14rem;
     margin: 0 auto;
-    margin-bottom: 3.5rem;
+    margin-bottom: 2rem;
 }
 
 .login__form {
     display: flex;
     flex-direction: column;
+    max-width: 31rem;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .login__form-row {
@@ -92,6 +96,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 4.5rem;
+    margin-top: auto;
     svg {
         width: 1.4rem;
         height: 1.4rem;
