--- a/src/templates/partials/sidebar.html
+++ b/src/templates/partials/sidebar.html
@@ -20,6 +20,7 @@
                 <svg width="24" height="24" aria-hidden="true" class="icon-bell">
                     <use xlink:href="#bell" />
                 </svg>
+                <span class="red-dot"></span>
             </span>
             <span class="sidebar__nav-link-text">
                 Уведомления
