--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,4 +22,6 @@
 @import 'blocks/my-events';
 @import 'blocks/event';
 @import 'blocks/new-user';
+@import 'blocks/events-status';
+@import 'blocks/create-event';
 
