--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -19,6 +19,26 @@ html {
     box-sizing: border-box;
     font-size: 10px;
     @include noHighlight();
+
+    @include breakpoint(large-desktop) {
+        font-size: 9px;
+    }
+    @include breakpoint(desktop) {
+        font-size: 8px;
+    }
+
+    @include breakpoint(laptop) {
+        font-size: 8px;
+    }
+
+    @include breakpoint(tablet) {
+        font-size: 7px;
+    }
+
+
+    @include breakpoint(small-tablet) {
+        font-size: 6px;
+    }
 }
 
 body {
