Зафиксирован сайдбар, ограничена высота селектов, добавлен пункт меню Отчеты

--- a/src/templates/partials/sidebar.html
+++ b/src/templates/partials/sidebar.html
@@ -37,6 +37,16 @@
                 Пользователи
             </span>
         </a>
+        <a href="#" class="sidebar__nav-link">
+            <span class="sidebar__nav-link-icon-container">
+                <svg width="24" height="24" aria-hidden="true" class="icon-checklist">
+                    <use xlink:href="#checklist" />
+                </svg>
+            </span>
+            <span class="sidebar__nav-link-text">
+                Отчеты
+            </span>
+        </a>
     </nav>
 
     <a href="#" download class="sidebar__user-policy">
