--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -24,8 +24,11 @@
 .page-content {
     flex-grow: 1;
     display: flex;
-  
+    padding-left: 29rem;
     overflow: hidden;
+    .sidebar-collapsed & {
+        padding-left: 10rem;
+    }
 }
 
 
@@ -33,6 +36,10 @@
     width: 29rem;
     flex-shrink: 0;
     align-self: flex-start;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
     .sidebar-collapsed & {
         width: 10rem;
     }
