--- a/src/scss/blocks/_create-event.scss
+++ b/src/scss/blocks/_create-event.scss
@@ -143,7 +143,7 @@
         border-radius: 1rem !important;
         background-color: white;
         margin-top: 0.5rem;
-        max-height: auto;
+        max-height: 40rem;
         word-break: initial;
         border-color: var(--blue-text);
 
