Тестовая функция добавки строки лектора

--- a/src/templates/blocks/create-event.html
+++ b/src/templates/blocks/create-event.html
@@ -28,7 +28,7 @@
                 <label class="create-event__form-label">
                     Дата и время начала
                     <span class="create-event__form-input-wrapper create-event__form-input-wrapper--calendar">
-                        <input type="text" class="create-event__form-input js-datetime-input datepicker-here" data-timepicker="true"/>
+                        <input type="text" class="create-event__form-input js-datetime-input datepicker-here" data-timepicker="true" />
                     </span>
                 </label>
             </div>
@@ -52,7 +52,6 @@
                 <label class="create-event__form-label">
                     Обоснование
                     <span class="create-event__form-input-wrapper create-event__form-input-wrapper--flexible">
-                       
                         <textarea class="create-event__form-input create-event__form-input--textarea"></textarea>
                     </span>
                 </label>
@@ -124,69 +123,69 @@
                             Статус
                         </span>
                     </div>
-                    <div class="create-event__lectors-card">
-                      
-                        <div class="create-event__lectors-card-panel">
-                            <div class="create-event__lectors-card-panel-item">
-                                Лекция 3
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <div class="create-event__lectors-select">
-                                    <select name="role" class="js-custom-select">
-                                        <option value="1">Петров А.А.</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                    </select>
+                    <div class="create-event__lectors-cards">
+                        <div class="create-event__lectors-card">
+                            <div class="create-event__lectors-card-panel">
+                                <div class="create-event__lectors-card-panel-item">
+                                    Лекция 3
                                 </div>
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <label class="create-event__lectors-checkbox">
-                                    <input type="checkbox" class="create-event__lectors-checkbox-input">
-                                    <span class="create-event__lectors-checkbox-mark"></span>
-                                </label>
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <input type="text" class="create-event__lectors-input">
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <a href="#" class="create-event__lectors-delete">
-                                    <svg width="20" height="20" aria-hidden="true" class="icon-delete">
-                                        <use xlink:href="#delete" />
-                                    </svg>
-                                </a>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <div class="create-event__lectors-select">
+                                        <select name="role" class="js-custom-select">
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <label class="create-event__lectors-checkbox">
+                                        <input type="checkbox" class="create-event__lectors-checkbox-input" />
+                                        <span class="create-event__lectors-checkbox-mark"></span>
+                                    </label>
+                                </div>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <input type="text" class="create-event__lectors-input" />
+                                </div>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <a href="#" class="create-event__lectors-delete">
+                                        <svg width="20" height="20" aria-hidden="true" class="icon-delete">
+                                            <use xlink:href="#delete" />
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="create-event__lectors-card">
-                      
-                        <div class="create-event__lectors-card-panel">
-                            <div class="create-event__lectors-card-panel-item">
-                                Лекция 3
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <div class="create-event__lectors-select">
-                                    <select name="role" class="js-custom-select">
-                                        <option value="1">Петров А.А.</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                    </select>
+                        <div class="create-event__lectors-card">
+                            <div class="create-event__lectors-card-panel">
+                                <div class="create-event__lectors-card-panel-item">
+                                    Лекция 3
                                 </div>
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <label class="create-event__lectors-checkbox">
-                                    <input type="checkbox" class="create-event__lectors-checkbox-input">
-                                    <span class="create-event__lectors-checkbox-mark"></span>
-                                </label>
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <input type="text" class="create-event__lectors-input">
-                            </div>
-                            <div class="create-event__lectors-card-panel-item">
-                                <a href="#" class="create-event__lectors-delete">
-                                    <svg width="20" height="20" aria-hidden="true" class="icon-delete">
-                                        <use xlink:href="#delete" />
-                                    </svg>
-                                </a>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <div class="create-event__lectors-select">
+                                        <select name="role" class="js-custom-select">
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <label class="create-event__lectors-checkbox">
+                                        <input type="checkbox" class="create-event__lectors-checkbox-input" />
+                                        <span class="create-event__lectors-checkbox-mark"></span>
+                                    </label>
+                                </div>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <input type="text" class="create-event__lectors-input" />
+                                </div>
+                                <div class="create-event__lectors-card-panel-item">
+                                    <a href="#" class="create-event__lectors-delete">
+                                        <svg width="20" height="20" aria-hidden="true" class="icon-delete">
+                                            <use xlink:href="#delete" />
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -198,7 +197,6 @@
                             Проверить
                         </a>
                     </div>
-                  
                 </div>
             </div>
             <div class="create-event__form-group create-event__form-group--halfwidth">
@@ -208,13 +206,13 @@
                 <div class="create-event__file-upload js-file-upload">
                     <div class="create-event__file-upload-dropzone">
                         <label class="create-event__file-label">
-                            <input type="file" name="file1"/>
+                            <input type="file" name="file1" />
                         </label>
                         <label class="create-event__file-label">
-                            <input type="file" name="file2"/>
+                            <input type="file" name="file2" />
                         </label>
                         <label class="create-event__file-label">
-                            <input type="file" name="file3"/>
+                            <input type="file" name="file3" />
                         </label>
                     </div>
                     <div class="create-event__files">
