Добавлена страница опрос + фикс селектов

--- a/src/templates/blocks/create-event.html
+++ b/src/templates/blocks/create-event.html
@@ -77,6 +77,18 @@
                         <option value="1">Лекция</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
+                        <option value="1">Лекция</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="1">Лекция</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="1">Лекция</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="1">Лекция</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
                     </select>
                 </div>
             </div>
